--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: 59rem;
   margin: auto;
-  background: var(--color-surface-300);
+  background: var(--color-surface-250);
   border-radius: var(--border-radius);
   overflow: hidden;
   margin-top: 3.5rem;
